--- a/man/gensio.5
+++ b/man/gensio.5
@@ -539,8 +539,11 @@ and then open it get stderr output.  The args for
 may be an optional "readbuf=<num>" and sets the size of the input
 buffer.
 .SS "Remote Address String"
-The remote address string is either "stdio" for the main channel or
-"stderr" for the error channel.
+The remote address string is either "stdio,<args>" for the main channel or
+"stderr,<args>" for the error channel.  The args will be a set of quoted
+strings with a space between each string, one for each argument,
+with '"' around each argument, each '"' in the string converted
+to '\\"' and each '\\' in the string converted to '\\\\'.
 .SS "Remote Address"
 Remote address is not supported.
 .SS "Remote ID"
@@ -983,6 +986,10 @@ The pty gensio support the GENSIO_CONTROL_ENVIRONMENT control to allow
 the environment to be set for the new process.
 .SS "Remote Address String"
 The remote address string the program and arguments run on the pty.
+The argiuments will be a set of quoted strings with a space between each
+string, one for each argument, with '"' around each argument, each '"'
+in the string converted to '\\"' and each '\\' in the string
+converted to '\\\\'.
 .SS "Remote Address"
 The address is a pointer to an integer, the ptym file descriptor is
 returned.  addrlen must be set to sizeof(int) when passed in.
