--- a/man/gensio_acc_control.3
+++ b/man/gensio_acc_control.3
@@ -12,10 +12,35 @@ gensio_acc_control \- Perform gensio accepter specific actions
 .SH "DESCRIPTION"
 .B gensio_acc_control
 performs a gensio accepter specific operation on the gensio accepter.
-This works exactly like gensio_control(3), see that for details.
+This works exactly like gensio_control(3), see that for details on get,
+depth, and how the data and datalen work.
 
-Currently no built-in gensio accepters support this, it is here for
-future.
+gensio control operations in
+.I option
+depend on the particular gensio.  Below some are documented, but there
+may be other controls available.  See the gensio documentation in
+gensio(5) for details.
+.SS "GENSIO_ACC_CONTROL_LADDR"
+Return the given local address for the given gensio.  Since a single
+gensio may have more than one local address, this control provides a
+means to tell which one.  The
+.I data
+string passed in should be the string representation of a the number (like
+created with snprintf()) for the particular index you want to fetch.  If
+you specify a number larger than the number of open listen sockets,
+.I GE_NOTFOUND
+is returned.  The return data is a string holding the address.
+.SS "GENSIO_ACC_CONTROL_LPORT"
+Return the port for the given local address for the given gensio.
+Since a single gensio may have more than one local address, this
+control provides a means to tell which one.  The
+.I data
+string passed in should be the string representation of a the number (like
+created with snprintf()) for the particular index you want to fetch.  If
+you specify a number larger than the number of open listen sockets,
+.I GE_NOTFOUND
+is returned.  The return data is a string holding the port number.
+
 .SH "RETURN VALUES"
 Zero is returned on success, or a gensio error on failure.
 .SH "SEE ALSO"
