Add a GE_SHUTDOWN error code
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_err.3
+++ b/man/gensio_err.3
@@ -76,6 +76,8 @@ GE_ADDRINUSE             Address already in use
 .br
 GE_INTERRUPTED           Operation was interrupted by a signal
 .PP
+GE_SHUTDOWN              Operation on shutdown file descriptor
+.PP
 .B gensio_err_to_str
 converts an integer error value to the given string.
 .SH "SEE ALSO"
