man: Add the new GE_LOCALCLOSED error
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_err.3
+++ b/man/gensio_err.3
@@ -78,6 +78,8 @@ GE_INTERRUPTED           Operation was interrupted by a signal
 .PP
 GE_SHUTDOWN              Operation on shutdown file descriptor
 .PP
+GE_LOCALCLOSED           Local side closed connection
+.PP
 .B gensio_err_to_str
 converts an integer error value to the given string.
 .SH "SEE ALSO"
