man: Fix some typos in gensio_close docs
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_close.3
+++ b/man/gensio_close.3
@@ -49,7 +49,7 @@ shut down the SSL connection for the other fork, too.  See gensio(5)
 for details on forking.
 
 .B gensio_free
-grees data assoicated with the gensio.  If it is open, the gensio is
+frees data associated with the gensio.  If it is open, the gensio is
 closed.  If you call
 .B gensio_free
 after
