Rework network address scanning to allow a default
Set gensio_scan_network_port so that the default protocol can be passed
in to the protocol paramter return.  If it is set, use that protocol by
default if none is specified in the address string.

This way, you don't have to pass in the address type for local
addresses, You used to have to do things like:

  udp(laddr=udp,192.168.27.1,3000'),192.168.27.2,3000

Now you can leave of the "udp," from the laddr and it will default to
udp.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -38,12 +38,12 @@ in options and such.  They may also be escaped with a "\\".  For instance,
 if you are specifying a laddr in an sctp address, you need to do this.
 The following address:
 .IP
-sctp(laddr=sctp,localhost,4001),localhost,3023
+sctp(laddr=localhost,4001),localhost,3023
 .PP
 will result in a failure because the option splitting code will split
 at the commas.  Instead, do:
 .IP
-sctp(laddr="sctp,localhost,4001"),localhost,3023
+sctp(laddr="localhost,4001"),localhost,3023
 .PP
 and it will work.
 
