udp: Add multicast support
Allow multicast addresses to be added/removed on UDP gensios.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -342,6 +342,16 @@ Don't be connection oriented, just receive all packets and deliver
 them without establishing connections.  Only valid for the client
 gensio.  The receive address is passed into the auxdata prefixed by
 "addr:", this is the address formatted by gensio_addr_to_str().
+.TP
+.B mloop[=true|false]
+If false, multicast packets transmitted will not be received on the
+local host.  If true, they will.
+.TP
+.B mcast=<addr>
+Add an address to receive multicast packets on.  The port number is
+ignored and should be set to zero.  You can specify multiple addresses
+in a single multicast option and/or the multicast option can be used
+multiple times to add multiple multicast addresses.
 .SS "Remote Address String"
 The remote address will be in the format "[ipv4|ipv6],<addr>,<port>" where the
 address is in numeric format, IPv4, or IPv6.
@@ -349,6 +359,21 @@ address is in numeric format, IPv4, or IPv6.
 UDP returns a standard struct sockaddr for gensio_get_raddr(3).
 .SS "Remote ID"
 Remote is not supported.
+.SS "UDP Multicast"
+Multicast can be used on UDP gensios with the
+.B nocon, maddr
+and
+.B laddr
+options.  To set up a multicast, create a client UDP gensio and set
+the laddr for the receive port and the destination address to the
+multicast and enable nocon, like:
+.IP
+"udp(mcast='ff02::1,0',laddr='::,3000',nocon),ff02::1,3000"
+.PP
+and you will receive and send data on the multicast address.  The
+.B laddr
+option is required to set the port to receive on.  It means you will
+have a local address, too, and will receive packets on that, too.
 .SH "SCTP"
 .B sctp[(<options>)][,<hostname>],<port>[[,<hostname>],<port>[...]]
 .br
