gtlssh: Add ipv4/ipv6 only options
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -75,6 +75,13 @@ Like -L, except the
 is on the remote machine and
 .I <connect addr>
 is done from the local machine.
+.TP
+.I \-4
+Do IPv4 only.
+.TP
+.I \-6
+Do IPv6 only.
+.TP
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
