--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -65,6 +65,12 @@ Disable TCP support
 .I \-P|\-\-pidfile file
 Create a standard pidfile using the given filename.
 .TP
+.TP
+.I \-4
+Do IPv4 only.
+.TP
+.I \-6
+Do IPv6 only.
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
